--- a/cmkts.BlogPage.WebAPI/cmkts.BlogPage.WebAPI.csproj
+++ b/cmkts.BlogPage.WebAPI/cmkts.BlogPage.WebAPI.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
